test: fix security issues

--- a/.github/workflows/run_e2e_tests.yml
+++ b/.github/workflows/run_e2e_tests.yml
@@ -40,9 +40,9 @@ jobs:
       TEST_EMAIL_PRO: ${{ secrets.TEST_AUTOTEST_PRO_EMAIL }}
       TEST_PASSWORD_PRO: ${{ secrets.TEST_AUTOTEST_PRO_PASSWORD }}
       DEV_EMAIL_PRO: ${{ secrets.DEV_AUTOTEST_PRO_EMAIL }}
-      DEV_PASSWORD_PRO: ${{ secrets.DEV_AUTOTEST_PRO_EMAIL }}
+      DEV_PASSWORD_PRO: ${{ secrets.DEV_AUTOTEST_PRO_PASSWORD }}
       PROD_EMAIL_PRO: ${{ secrets.PROD_AUTOTEST_PRO_EMAIL }}
-      PROD_PASSWORD_PRO: ${{ secrets.PROD_AUTOTEST_PRO_EMAIL }}
+      PROD_PASSWORD_PRO: ${{ secrets.PROD_AUTOTEST_PRO_PASSWORD}}
       TEST_KEYCLOAK_ADMIN_USER: ${{ secrets.TEST_KEYCLOAK_ADMIN_USER }}
       TEST_KEYCLOAK_ADMIN_PASSWORD: ${{ secrets.TEST_KEYCLOAK_ADMIN_PASSWORD }}
       DEV_KEYCLOAK_ADMIN_USER: ${{ secrets.DEV_KEYCLOAK_ADMIN_USER }}
